--- a/templates/css/single-cours-modern.css
+++ b/templates/css/single-cours-modern.css
@@ -1,8 +1,8 @@
 :root {
   /* Couleurs de la marque */
-  --color-primary: #1e88e5; /* Bleu vibrant (changez-le pour votre marque) */
-  --color-primary-dark: #1565c0;
-  --color-primary-light: #64b5f6;
+  --color-primary: var(--dourousi-color-main); /* Bleu vibrant (changez-le pour votre marque) */
+  --color-primary-dark: var(--dourousi-color-secondary);
+  --color-primary-light: var(--dourousi-color-secondary);
   
   /* Couleurs de fond et de texte */
   --color-background: #f8f9fa; /* Gris très clair */
@@ -18,6 +18,17 @@
   /* Espacement */
   --spacing-unit: 1rem; /* 16px */
   --border-radius: 8px;
+}
+
+
+/* Styles pour le lecteur audio Plyr */
+.plyr--audio {
+  --plyr-control-icon-size: 30px;
+  /* taille des icônes */
+  --plyr-color-main: var(--dourousi-color-secondary);
+  /* couleur accent (progress, boutons actifs, etc.) */
+  --plyr-audio-controls-background: var(--dourousi-color-background);
+  --plyr-audio-control-color: var(--dourousi-color-text-audio);
 }
 
 /* Base pour une meilleure accessibilité et lisibilité */
